Changed default logger version

--- a/src/synthetic_tasks/copy_sequence/example_config.yaml
+++ b/src/synthetic_tasks/copy_sequence/example_config.yaml
@@ -11,7 +11,7 @@ trainer:
     init_args:
       save_dir: .
       name: lightning_logs
-      version: plug_in_model_and_dm_cb
+      version: example
       log_graph: false
       default_hp_metric: true
       prefix: ''
